--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "node": ">= 0.10.0"
   },
   "devDependencies": {
-    "grunt": "~0.4.2",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-jshint": "~0.6.4",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-sass": "~0.14.2"
+    "grunt": "~0.4.5",
+    "grunt-autoprefixer": "~1.0.1",
+    "grunt-sass": "~0.17.0",
+    "grunt-contrib-watch": "~0.6.1",
+    "load-grunt-tasks": "~1.0.0",
+    "time-grunt": "~1.0.0"
   }
 }
