--- a/package.json
+++ b/package.json
@@ -7,19 +7,23 @@
     "type": "git",
     "url": "git@bitbucket.org:ecmdesign/ecm-design.git"
   },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "http://opensource.org/licenses/MIT"
-    }
-  ],
+  "licenses": {
+    "type": "ISC",
+    "url": "http://opensource.org/licenses/ISC"
+  },
+  "scripts": {
+    "postinstall": "grunt dev"
+  },
   "engines": {
     "node": ">= 0.10.0"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-autoprefixer": "~1.0.1",
+    "grunt-contrib-concat": "~0.5.0",
+    "grunt-contrib-jshint": "~0.10.0",
     "grunt-sass": "~0.17.0",
+    "grunt-contrib-uglify": "~0.5.0",
     "grunt-contrib-watch": "~0.6.1",
     "load-grunt-tasks": "~1.0.0",
     "time-grunt": "~1.0.0"
