--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,8 @@ node_modules
 .sass-cache
 
 # Styles
-assets/css/main.min.css*
+assets/css/main.css*
+assets/css/main.min.css
 
 # Junk files
 .DS_Store
